fix: code cleanup